<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/date_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button android:id="@+id/datePickerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/select_date"/>

		<TextView android:id="@+id/showDate"
		    android:layout_width="0dp" 
		    android:layout_height="wrap_content"
		    android:layout_weight="2"
		    android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </LinearLayout>
        
   	
   	<TextView
        android:id="@+id/descLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/desc_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />
   	
   	<EditText
   	    android:id="@+id/description"
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:hint="@string/desc_hint"
   	    android:inputType="text"   />
   		
   	<TextView
        android:id="@+id/percentageLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/percentage_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />
   	
   	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
		
		<EditText
   	    android:id="@+id/startPercentage"
   	    android:layout_width="0dp"
   	    android:layout_height="wrap_content"
   	    android:layout_weight="1"
   	    android:hint="@string/start_percentage_hint"
   	    android:inputType="numberDecimal" />
		
		<EditText
   	    android:id="@+id/endPercentage"
   	    android:layout_width="0dp"
   	    android:layout_height="wrap_content"
   	    android:layout_weight="1"
   	    android:hint="@string/end_percentage_hint"
   	    android:inputType="numberDecimal" />
        
    </LinearLayout>
    
   	<TextView
        android:id="@+id/timeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/time_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />
   	
   	<EditText
   	    android:id="@+id/timeElapsed"
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:hint="@string/time_hint"
   	    android:inputType="number" />
   	
   	<Button android:id="@+id/newEntrySubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_entry"
        android:onClick="submitEntry"/>
   	
</LinearLayout>